--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .mtj.tmp/
 
 # Eclipse Metadata
-.metadata/
+.metadata
 
 # Package Files #
 *.jar
@@ -14,3 +14,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 MathosCore/.idea/workspace.xml
+*.resources
+*.prefs
+.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
