--- a/MathosCore/.gitignore
+++ b/MathosCore/.gitignore
@@ -1,51 +1,10 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
+#    ______           __    _                        
+#   / ____/  _____   / /   (_)    ____    _____  ___ 
+#  / __/    / ___/  / /   / /    / __ \  / ___/ / _ \
+# / /___   / /__   / /   / /    / /_/ / (__  ) /  __/
+#/_____/   \___/  /_/   /_/    / .___/ /____/  \___/ 
+#                             /_/                    
 
-*.iml
-
-## Directory-based project format:
-.idea/
-# if you remove the above rule, at least ignore the following:
-
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
-
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
-
-## File-based project format:
-*.ipr
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ
-out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-
-# Covers Eclipse
 *.pydevproject
 .metadata
 .gradle
@@ -74,6 +33,9 @@ local.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# Java annotation processor (APT)
+.factorypath
+
 # PDT-specific
 .buildpath
 
@@ -82,3 +44,56 @@ local.properties
 
 # TeXlipse plugin
 .texlipse
+
+#    ____           __           __    __    _        _ 
+#   /  _/   ____   / /_  ___    / /   / /   (_)      (_)
+#   / /    / __ \ / __/ / _ \  / /   / /   / /      / / 
+# _/ /    / / / // /_  /  __/ / /   / /   / /      / /  
+#/___/   /_/ /_/ \__/  \___/ /_/   /_/   /_/    __/ /   
+#                                              /___/
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion
+
+*.iml
+
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
+
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
+
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
+
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
