--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+MathosCore/.idea/workspace.xml
