--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-#    ______           __    _                        
-#   / ____/  _____   / /   (_)    ____    _____  ___ 
-#  / __/    / ___/  / /   / /    / __ \  / ___/ / _ \
-# / /___   / /__   / /   / /    / /_/ / (__  ) /  __/
-#/_____/   \___/  /_/   /_/    / .___/ /____/  \___/ 
-#                             /_/                    
-
 *.pydevproject
-.metadata
+.metadata/
 .gradle
 bin/
 tmp/
@@ -45,12 +38,6 @@ local.properties
 # TeXlipse plugin
 .texlipse
 
-#    ____           __           __    __    _        _ 
-#   /  _/   ____   / /_  ___    / /   / /   (_)      (_)
-#   / /    / __ \ / __/ / _ \  / /   / /   / /      / / 
-# _/ /    / / / // /_  /  __/ / /   / /   / /      / /  
-#/___/   /_/ /_/ \__/  \___/ /_/   /_/   /_/    __/ /   
-#                                              /___/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion
 
 *.iml
@@ -81,6 +68,8 @@ local.properties
 ## File-based project format:
 *.ipr
 *.iws
+*.eml
+*.iml
 
 ## Plugin-specific files:
 
@@ -97,4 +86,3 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
-MathosCore/.idea/workspace.xml
